--- a/public_html/media/css/main.css
+++ b/public_html/media/css/main.css
@@ -1,1 +1,43 @@
-test
+.distance-wrapper {
+    position: absolute;
+    top: 10px;
+    left: 400px;
+}
+
+.twitter-image {
+    width: 40px;
+    height: 40px;
+    float: left;
+    padding: 2px;
+}
+
+body {
+    font-family: 'PT Sans', arial;
+}
+
+h1 {
+    font-family: 'Bangers', arial, serif; 
+    font-weight: normal;
+}
+
+.twitter-status {
+    clear: both;
+    font-size: 0.7em;
+    height: 45px;
+    width: 375px;
+    margin: 5px;
+    border: 1px solid #eee;
+    overflow: hidden;
+}
+
+.twitter-author {
+    font-weight: bold;
+    color: #27b;
+}
+
+.twitter-time {
+    color: #999;
+    font-style: italic;
+    font-size: 0.9em;
+}
+
