--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
 <head> 
   <meta charset="utf-8"> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-  <title>CrunchTime! Rowathon!</title> 
+  <title>Rowathon!</title> 
   <meta name="description" content="Crunchtime! Rowathon"> 
   <meta name="author" content="CrunchTime! Developers"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link href="{{ MEDIA_URL }}/css/fonts.css" rel="stylesheet" type="text/css"> 
-
+  <link href="http://fonts.googleapis.com/css?family=Bangers" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}/css/main.css">
 </head> 
 
@@ -21,7 +22,7 @@
   <div id="container"> 
     <header> 
       <div id="header-main"> 
-        <h1 id="logo">CrunchTime Rowathon!</h1> 
+        <h1 id="logo">Rowathon!</h1> 
       </div> 
     </header> 
     
@@ -32,13 +33,10 @@
   </div> 
  
  
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script> 
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}/js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script> 
-  
-  <!--[if lt IE 7 ]>
-    <script src="{{ MEDIA_URL }}/js/libs/dd_belatedpng.js"></script>
-    <script> DD_belatedPNG.fix('img, .png_bg'); </script>
-  <![endif]--> 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.js"></script> 
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}/js/libs/jquery-1.4.3.js"%3E%3C/script%3E'))</script> 
+
+  <script src="{{ MEDIA_URL }}/js/main.js" type="text/javascript"></script>
   
 </body> 
 </html> 
