--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
   </div> 
  
  
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.js"></script> 
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}/js/libs/jquery-1.4.3.js"%3E%3C/script%3E'))</script> 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script> 
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}/js/jquery-1.5.2js"%3E%3C/script%3E'))</script> 
 
   <script src="{{ MEDIA_URL }}/js/main.js" type="text/javascript"></script>
   
