--- a/public_html/media/css/main.css
+++ b/public_html/media/css/main.css
@@ -41,3 +41,43 @@ h1 {
     font-size: 0.9em;
 }
 
+.distance-info {
+    margin-right: 12px;
+}
+
+.meters {
+    font-size: 3em;
+    font-weight: bolder;
+    display: block;
+    margin: auto;
+}
+
+.distance-wrapper {
+    text-align: center;
+}
+
+.twitter-feed {
+    float: left;
+}
+
+.map-display {
+    float: right;
+    width: 300px;
+    height: 600px;
+    border: 1px solid black;
+    margin-right: 20px;
+}
+
+.clear-both {
+    clear: both;
+}
+
+#top-span {
+    height: 40px;
+    display: block;
+}
+
+#logo {
+    font-size: 2.6em;
+    margin-left: 20px;
+}
