--- a/templates/base.html
+++ b/templates/base.html
@@ -11,18 +11,21 @@
   <meta name="description" content="Crunchtime! Rowathon"> 
   <meta name="author" content="CrunchTime! Developers"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link href="{{ MEDIA_URL }}/css/fonts.css" rel="stylesheet" type="text/css"> 
   <link href="http://fonts.googleapis.com/css?family=Bangers" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}/css/main.css">
+
+  <script type="text/javascript"
+          src="http://maps.google.com/maps/api/js?sensor=false">
+  </script>
 </head> 
 
-<body class="main-body"> 
+<body class="main-body">
  
   <div id="container"> 
     <header> 
       <div id="header-main"> 
-        <h1 id="logo">Rowathon!</h1> 
+        <h1 id="logo">CrunchTime Rowathon!</h1> 
       </div> 
     </header> 
     
@@ -32,8 +35,7 @@
     </div>
   </div> 
  
- 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script> 
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script> 
   <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}/js/jquery-1.5.2js"%3E%3C/script%3E'))</script> 
 
   <script src="{{ MEDIA_URL }}/js/main.js" type="text/javascript"></script>
