--- a/templates/mainrow.html
+++ b/templates/mainrow.html
@@ -7,6 +7,8 @@
 
 <div id="distance-display"></div>
 
+<span class="clear-both" id="top-span">&nbsp;</span>
+
 <div class="twitter-feed">
   {% for status in twitter_statuses %}
   <div class="twitter-status">
@@ -16,8 +18,10 @@
     </span><br>
     <span class="twitter-time">about {{ status.created_at|humanize_ago }} ago</span>
   </div>
-
   {% endfor %}
 </div>
 
+<div class="map-display" id="map-display"></div>
+
+<span class="clear-both">&nbsp;</span>
 {% endblock %}
