--- a/templates/mainrow.html
+++ b/templates/mainrow.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+<div id="clock"></div>
+
 <div id="distance-display"></div>
 
 <span class="clear-both" id="top-span">&nbsp;</span>
